# himg

./: .gitignore  AUTHORS  CMakeLists.txt  README  plot_conv_dof.py  run
cmake/: FindHERMES2D.cmake  FindHERMES_COMMON.cmake  FindLIBPNG.cmake
doc/: index.rst
doc/src/: intro-1.rst
img/diag/: diag.ppm
img/lena/: lena.ppm
img/sat/: sat.ppm
img/squares/: squares.ppm
src/: CMakeLists.txt  adapt_storage.cpp  adapt_storage.h  h1_adapt_image.cpp  h1_adapt_image.h  h1_image_proj_based_selector.cpp  h1_image_proj_based_selector.h  himg.cpp  himg.h  parameters.cpp  parameters.h  pix_by_pix_integrator.cpp  pix_by_pix_integrator.h
src/shared/: bitmap.cpp  bitmap.h  img2d.cpp  img2d.h  input_params.cpp  input_params.h
